WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201241
WKAttachmentTests.DropFolderAsAttachmentAndMoveByDragging fails in some iOS simulator configurations
https://bugs.webkit.org/show_bug.cgi?id=201241
Summary
WKAttachmentTests.DropFolderAsAttachmentAndMoveByDragging fails in some iOS s...
Wenson Hsieh
Reported
2019-08-28 15:21:03 PDT
<
rdar://problem/54317588
>
Attachments
Patch
(2.33 KB, patch)
2019-08-28 15:45 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-08-28 15:45:02 PDT
Created
attachment 377497
[details]
Patch
Tim Horton
Comment 2
2019-08-28 15:50:07 PDT
Could also be “send drag updates till you get the reply you expect”
Wenson Hsieh
Comment 3
2019-08-28 15:53:54 PDT
(In reply to Tim Horton from
comment #2
)
> Could also be “send drag updates till you get the reply you expect”
It could! But it seems a bit cumbersome for each test to need to tell the harness what kind of UIDropOperation it expects. That said, most of the drag and drop tests that involve drop sessions probably end up expecting UIDropOperationCopy.
WebKit Commit Bot
Comment 4
2019-08-28 17:01:10 PDT
Comment on
attachment 377497
[details]
Patch Clearing flags on attachment: 377497 Committed
r249226
: <
https://trac.webkit.org/changeset/249226
>
WebKit Commit Bot
Comment 5
2019-08-28 17:01:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug