WKAttachmentTests.DropFolderAsAttachmentAndMoveByDragging fails in some iOS simulator configurations https://bugs.webkit.org/show_bug.cgi?id=201241 <rdar://problem/54317588>

Reviewed by Tim Horton.

For reasons that are still unknown, it's possible for iOS 13 simulators to get into a state where the IPC
communication delay between the web and UI processes can become extraordinarily long. Under these circumstances,
the drag and drop harness fails to simulate a drop, since it ends up firing all scheduled calls to
-dropInteraction:sessionDidUpdate: before the first response from the web process arrives in the UI process, so
it believes that the web view has rejected the drop from being handled.

Instead, make the drag and drop simulator robust by ensuring a presentation update between drop session updates,
to make sure that the web process has had time to send a response after each update.

* TestWebKitAPI/ios/DragAndDropSimulatorIOS.mm:
(-[DragAndDropSimulator _advanceProgress]):


Canonical link: https://commits.webkit.org/214928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249226 268f45cc-cd09-0410-ab3c-d52691b4dbfc